# codex-chat-gateway-windows

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PORTABLE_BUILD.md  README.md  README.zh-CN.md  Studio.bat  THIRD_PARTY_NOTICES.md  check-gateway.bat  codex-provider.example.toml  config.yaml  configure-claude-desktop.bat  configure-codex.bat  desktop.bat  disable-autostart.bat  enable-autostart.bat  gateway_runtime.py  install.bat  model-config.bat  requirements.txt  restore-official-claude-desktop.bat  restore-official-codex.bat  run_gateway.py  start-gateway.bat  stop-gateway.bat  停止网关.bat  启动网关.bat  安装.bat  构建Studio安装器.bat  桌面版-Tauri.bat  网关状态.bat
.github/workflows/: release.yml
desktop/: GatewayDesktop.cs  app.manifest
desktop-tauri/: README.md  index.html  package-lock.json  package.json
desktop-tauri/src/: App.tsx  Particles.tsx  RoutingMap.tsx  TitleBar.tsx  TrayMenu.tsx  api.ts  app.css  icons.tsx  main.tsx  routing-map.css  styles.css  tray-menu.css  types.ts  updater.ts
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: client_config.rs  gateway.rs  lib.rs  main.rs  models.rs  paths.rs  updater.rs
docs/: MODEL_ROUTING.md  RELEASE_AND_UPDATES.md  RELEASE_v1.4.0.md  STRUCTURE.md
examples/: codex-provider.example.toml
installer/: CodexChatGateway-Studio.iss  CodexChatGateway.iss
native-gateway/: Cargo.toml
native-gateway/src/: config.rs  main.rs  protocol.rs  server.rs
patches/: README.md
scripts/: build-desktop.ps1  build-embedded-runtime.ps1  build-installer.ps1  build-portable.ps1  build-tauri-installer.ps1  build-updater-artifacts.ps1  check.ps1  claude_desktop_config.py  configure-claude-desktop.ps1  configure-codex.ps1  configure-gateway.ps1  configure_codex.py  disable-autostart.ps1  enable-autostart.ps1  generate-updater-keys.ps1  load-env.ps1  model-manager.ps1  model-store.ps1  prune-embedded-runtime.ps1  release-notes.ps1  restore-claude-desktop.ps1  restore-codex.ps1  restore_codex.py  setup.ps1  start-background.ps1  start.ps1  status.ps1  stop-background.ps1  sync-versions.ps1
tests/: mock_chat_upstream.py  test_anthropic_gateway.py  test_claude_desktop_config.py  test_codex_restore.py  test_gateway_routing.py  test_model_store_v2.ps1  test_native_gateway.py  test_tool_output_adjacency.py
