[package]
name = "codex-chat-gateway-desktop"
version = "1.3.0"
description = "Codex Chat Gateway desktop console (Tauri)"
authors = ["codex-chat-gateway"]
edition = "2021"

[lib]
name = "codex_chat_gateway_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
sysinfo = "0.33"
thiserror = "2"
