[package]
name = "codex-chat-gateway-desktop"
version = "1.4.2"
description = "Codex Chat Gateway desktop console (Tauri) — https://github.com/xuyuanzhang1122/codex-chat-gateway-windows"
authors = ["xuyuanzhang1122", "codex-chat-gateway contributors"]
edition = "2021"

[lib]
name = "codex_chat_gateway_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
sha2 = "0.10"
sysinfo = "0.33"
parking_lot = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
